@@ -3,3 +3,4 @@ Makefile.in
 *.pyc
 *~
 sabayon
+profilesdialog
