@@ -1,3 +1,9 @@
+Tue Feb  8 17:12:02 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* admin-tool/.cvsignore admin-tool/Makefile.am
+	  admin-tool/profilesdialog.in: adding a wrapper shell for
+	  profilesdialog too
+
 2005-02-08  Mark McLoughlin  <markmc@redhat.com>
 
 	* lib/sources/Makefile.am: s/testmodule.py/testsource.py/
